# NewPlace

./: .NewPlace.sln.swp  .gitignore  NewPlace.sln  README.md  Untitled Diagram.drawio  tye.yaml
.tye/: docker_store  process_store
API/: API.csproj  Dockerfile  Program.cs  Startup.cs  appsettings.json
AdvertisementService/: AdvertisementService.csproj  Program.cs  appsettings.json
ApplicationCore/: ApplicationCore.csproj
CatalogService/: CatalogService.csproj  Program.cs  Startup.cs
Common/: Common.csproj
EventConsumerService/: EventConsumerService.csproj  Program.cs  Worker.cs
Infrastructure/: Infrastructure.csproj  NewPlaceDb.cs
NewPlace/: NewPlace.csproj  Program.cs  Startup.cs  appsettings.json  npm-shrinkwrap.json  package.json
NewPlaceAngular/: NewPlaceAngular.csproj  Program.cs  WeatherForecast.cs
NewPlaceBlazor/: NewPlaceBlazor.csproj  Program.cs  _Imports.razor
NewPlaceReact/: NewPlaceReact.csproj  NewPlaceReact.esproj  WeatherForecast.cs  package-lock.json  package.json
NewPlaceVue/: NewPlaceVue.esproj  README.md  package-lock.json  package.json  vue.config.js
PaymentService/: Dockerfile  PaymentService.csproj  Program.cs  Startup.cs  appsettings.json
RecommendationService/: MLModel.mbconfig  Program.cs  RecommendationService.csproj
RecommendationServicePython/: RecommendationServicePython.py  (+1 more)
review_service/: Cargo.toml  Dockerfile
review_service/rest_requests_tests/: create.http  delete.http  update.http
review_service/src/: main.rs
review_service/src/domain/: domain.rs
review_service/src/infrastructure/: infrastructure.rs
(+507 files in other folders)
