[package]
name = "review_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.5.0-rc.2"
postgres = "0.19.4"
serde = { version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }


[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]